package br.nemo.immigrant.ontology.entity.scrumprocess.models;

public enum CeremonyType {
    PLANNING,
    DAILY,
    REVIEW,
    RETROSPECTIVE
}