package br.nemo.immigrant.ontology.entity.scrumprocess.models;

public enum ScrumDevelopmentTaskType {
    PERFORMED,
    INTENDED
}