package br.nemo.immigrant.ontology.entity.scrumprocess.models;

public enum ScrumProjectType {
    SCRUMCOMPLEXPROJECT,
    SCRUMATOMICPROJECT
}