package br.nemo.immigrant.ontology.entity.scrumprocess.models;

public enum SucessfullyPerformedType {
    NONSUCESSFULLY,
    SUCCESSFULLY
}